# gobject-ffi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
ffi/: Cargo.toml
ffi/src/: lib.rs
macros/: Cargo.toml
macros/src/: context.rs  generator.rs  lib.rs  method.rs  params.rs  types.rs  utils.rs
macros/tests/ui/fail/: c_return_invalid_transfer.rs  c_return_invalid_transfer.stderr  c_return_type_missing_transfer.rs  c_return_type_missing_transfer.stderr  c_type_missing_transfer.rs  c_type_missing_transfer.stderr  invalid_transfer_mode.rs  invalid_transfer_mode.stderr  missing_c_type_name.rs  missing_c_type_name.stderr  wrong_ffi_impl_arg.rs  wrong_ffi_impl_arg.stderr  wrong_transfer_keyword.rs  wrong_transfer_keyword.stderr
macros/tests/ui/pass/: async_method.rs  basic_method.rs  boxed_type.rs  constructor.rs  empty_impl.rs  enum_type.rs  error_domain_type.rs  ffi_generation.rs  flags_type.rs  many_params.rs  mixed_transfer_modes.rs  mutable_refs.rs  option_types.rs  shared_type.rs  transfer_modes.rs
tests/c_integration/: Cargo.toml  Makefile  test.c
tests/c_integration/src/: lib.rs
