[package]
name = "gobject-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Proc macros for GObject FFI generation"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
glib = "0.21"
gio = "0.21"
futures-util = { workspace = true }
gobject-ffi = { path = "../ffi" }
trybuild = "1.0"
